--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,11 @@ main{
     padding: 20px 10px;
     
 }
+
+@media screen and (min-width:1400px) {
+    main{
+        padding: 20px 120px;
+        // background-color: red;
+    }
+        
+    }
