--- a/src/app/core/shared-components/dropdown/dropdown.component.scss
+++ b/src/app/core/shared-components/dropdown/dropdown.component.scss
@@ -1,6 +1,8 @@
 
 :host{
     position: relative;
+    width: 100%;
+   
     .title{
         font-size: 12px;
         font-weight: bold;
@@ -8,6 +10,7 @@
     
     .selected-option{
         padding-top: 0px;
+        // padding: 10px;
         margin-top: 5px;
         display: flex;
         flex-direction: row;
@@ -17,6 +20,7 @@
         border: 1px solid #DEE2E6;
         background-color: white;
         border-radius: 4px;
+        height: 34px;
         width:100%;
         // height: px !important;
         .img-container{
@@ -24,6 +28,7 @@
         flex-direction: row;
         gap:4px;
         align-items: center;
+        padding: 5px;
         img{
             width:14px;
             height: 14px;
@@ -44,6 +49,9 @@
         background-color: white;
         list-style: none;
         border-radius: 4px;
+        display: flex;
+        flex-direction: column;
+       padding-left: 4px;
        .add-empl{
     display: flex;
     flex-direction: row;
@@ -60,6 +68,7 @@
             flex-direction: row;
             padding: 4px;
             gap:4px;
+            margin-top: 5px;
             img{
                 width:14px;
                 height: 14px;
@@ -68,3 +77,4 @@
         }
     }
 }
+
