--- a/src/app/core/shared-components/filtering-criterias/filtering-criterias.component.scss
+++ b/src/app/core/shared-components/filtering-criterias/filtering-criterias.component.scss
@@ -32,7 +32,7 @@
         color:#212529
     };
     label{
-        font-size:13px;
+        font-size:10px;
         word-break: break-word;
         overflow-wrap: break-word;
         white-space: normal;
@@ -48,8 +48,8 @@
     }
     label::before{
         content:'';
-        width:0.4rem;
-        height: 0.4rem;
+        width:0.3rem;
+        height: 0.3rem;
         border:1.5px solid #212529;
         border-radius: 3px;
         padding: 3px;
@@ -69,12 +69,74 @@
         button{
             display: flex;
             align-items: center;
-font-size: 12px;
+font-size: 13px;
 color: white;
 background-color:#8338EC;
 border-radius: 10px;
 border: none;
 padding:0px 15px 2px;
 }
+    }
+}
+
+@media screen and (min-width:700px){
+    .main-container{
+        ul{
+      li {
+           section{
+        
+        label{
+            font-size:13px;
+        }
+        label::before{
+            content:'';
+            width:0.4rem;
+            height: 0.4rem;
+        }
+        }
+      }
+    
+        }
+        .btn-sect{
+            button{
+    font-size: 15px;
+    padding:5px 15px;
+    }
+        }
+    }
+}
+
+
+@media screen and (min-width:1000px){
+    .main-container{
+        width:688px;
+   
+        .btn-sect{
+            button{
+                width:135px;
+                display: flex;
+                justify-content: center;
+    font-size: 15px;
+    padding:5px 15px;
+    border-radius: 20px;
+    }
+        }
+    }
+}
+
+@media screen and (min-width:1920px){
+    .main-container{
+        width:688px;
+   
+        .btn-sect{
+            button{
+                width:135px;
+                display: flex;
+                justify-content: center;
+    font-size: 15px;
+    padding:5px 15px;
+    border-radius: 20px;
+    }
+        }
     }
 }
