--- a/src/app/core/shared-components/input/input.component.scss
+++ b/src/app/core/shared-components/input/input.component.scss
@@ -10,7 +10,9 @@
         outline: none;
         padding: 8px;
         border-radius: 5px;
-        border:1px solid #DEE2E6
+        border:1px solid #DEE2E6;
+        height: 34px;
+        width: 100%;
     }
     .span-container{
         display: flex;
@@ -22,3 +24,15 @@
         
     }
 }
+
+@media screen and (min-width:1000px) {
+    :host{
+        width:100%
+    ;
+    label{
+        font-size: 15px
+    }
+    input{
+        font-size: 13px;
+    }}
+        }
