--- a/src/app/core/shared-components/task-column/task-column.component.scss
+++ b/src/app/core/shared-components/task-column/task-column.component.scss
@@ -1,4 +1,5 @@
-.collapsible-section{
+.collapsable-section, .noncollapsable-section{
+  // display: flex;
     .header {
       display: flex;
       justify-content: space-between;
@@ -22,5 +23,19 @@
         border-radius: 0 0 5px 5px;
       }
 
+}
+.noncollapsable-section{
+display:none
+}
+
+@media screen and (min-width:1400px) {
+  .collapsable-section{
+    display: none;
+    background-color: red;
+  }
+  .noncollapsable-section{
+    display:flex;
+    flex-direction: column;
+    }
 }
 
