--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -58,3 +58,54 @@ header{
     }
     
 }
+
+@media screen and (min-width:700px) {
+    header{
+        padding: 10px 15px;
+        
+        img{
+            width:170px;
+            height: 30px;
+        }
+
+        .add-employee{
+            font-size: 13px;
+            padding: 7px;
+        }
+       
+        .add-task{
+            font-size: 13px;
+            letter-spacing: 0.2px; 
+
+         span{
+            font-size: 15px;
+         }
+        }
+
+    }
+    
+}
+
+
+@media screen and (min-width:1000px) {
+    header{
+        .add-employee, .add-task{
+            font-size: 13px;
+        }
+        
+         span{
+            font-size: 18px;
+         }
+    }
+    
+}
+
+// chemi lapptop aris 1600
+@media screen and (min-width:1400px) {
+    header{
+        background-color: rgb(0, 255, 136);
+       padding: 15px 120px;
+    
+    }
+    
+}
