--- a/src/app/tasks/task-card/task-card.component.scss
+++ b/src/app/tasks/task-card/task-card.component.scss
@@ -24,6 +24,7 @@ flex-direction: row;
         display: flex;
         gap:4px;
         border-radius: 4px;
+        border:0.5px solid;
         padding: 4px;
         font-size: 12px;
         font-weight: 500;
