--- a/src/app/tasks/tasks.component.scss
+++ b/src/app/tasks/tasks.component.scss
@@ -48,14 +48,41 @@
             }
         }
         .main-container{
-            width:100%;
-        display: flex;
-        flex-direction: column;
-        gap:10px
-         
-              
-            
-              
+        
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 16px;
+        max-width: 100%;     
         }
 }
 
+@media screen and (min-width:700px){
+  :host{
+    h1{font-size: 24px;}
+    .filters{
+       
+        ul{
+            padding: 10px;
+        li{
+            font-size: 14px;
+        }
+        }
+    }
+    }
+  }  
+
+  @media screen and (min-width:1000px) {
+ .filters{
+    width: 688px;
+ }
+    
+}
+
+
+// @media screen and (min-width:1400px) {
+// main{
+//     padding: 0px 120px;
+//     background-color: red;
+// }
+    
+// }
