--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -51,7 +51,9 @@
                 <img src="images/calendar.svg">
                 <p>დავალების ვადა</p>
             </div>
-            <div class="deadline-details"></div>
+            <div class="deadline-details">
+                <p>{{weekDay()}} - <span>{{formattedDate()}}</span></p>
+            </div>
         </div>
     </div>
 
