--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,6 @@
     border: 1px solid #FA4D4D !important ;
 }    
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
